--- a/app/src/main/res/layout/fragment_terapi.xml
+++ b/app/src/main/res/layout/fragment_terapi.xml
@@ -111,6 +111,51 @@
             app:layout_constraintStart_toStartOf="@+id/cv_anak"
             app:layout_constraintTop_toTopOf="@+id/cv_anak" />
 
+        <androidx.cardview.widget.CardView
+            android:id="@+id/pilihan_anak"
+            android:visibility="gone"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:elevation="4dp"
+            app:cardCornerRadius="8dp"
+            app:contentPadding="12dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginEnd="24dp"
+            app:layout_constraintBottom_toBottomOf="@+id/cv_anak"
+            app:layout_constraintEnd_toEndOf="@+id/cv_anak"
+            app:layout_constraintStart_toStartOf="@+id/cv_anak"
+            app:layout_constraintTop_toTopOf="@+id/cv_anak">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <ImageView
+                    android:id="@+id/img_anak"
+                    android:layout_width="55dp"
+                    android:layout_height="55dp"
+                    android:background="@drawable/pic_placeholder"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    android:id="@+id/tv_name"
+                    style="@style/BaseGillSansMedium"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="24dp"
+                    android:text="Mar Joe Kee"
+                    android:textColor="@color/black"
+                    android:textSize="16sp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/img_anak"
+                    app:layout_constraintTop_toTopOf="parent" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </androidx.cardview.widget.CardView>
+
         <TextView
             android:layout_marginTop="32dp"
             android:id="@+id/textView3"
@@ -147,6 +192,42 @@
             app:layout_constraintEnd_toEndOf="@+id/cv_template_materi"
             app:layout_constraintStart_toStartOf="@+id/cv_template_materi"
             app:layout_constraintTop_toTopOf="@+id/cv_template_materi" />
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/pilihan_materi"
+            android:visibility="gone"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            app:cardBackgroundColor="@color/white"
+            app:cardCornerRadius="8dp"
+            app:cardElevation="2dp"
+            app:layout_constraintBottom_toBottomOf="@+id/cv_template_materi"
+            app:layout_constraintEnd_toEndOf="@+id/cv_template_materi"
+            app:layout_constraintStart_toStartOf="@+id/cv_template_materi"
+            app:layout_constraintTop_toTopOf="@+id/cv_template_materi">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <TextView
+                    android:id="@+id/tv_title"
+                    style="@style/BaseHelvMedium.TextRegular"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="12dp"
+                    android:layout_marginEnd="12dp"
+                    android:layout_marginBottom="12dp"
+                    android:textAlignment="center"
+                    android:textColor="@color/black"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    tools:text="Template A" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </androidx.cardview.widget.CardView>
 
         <TextView
             android:layout_marginTop="32dp"
@@ -187,6 +268,63 @@
             app:layout_constraintEnd_toEndOf="@+id/cv_fase_level"
             app:layout_constraintStart_toStartOf="@+id/cv_fase_level"
             app:layout_constraintTop_toTopOf="@+id/cv_fase_level" />
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="0dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginEnd="24dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginTop="8dp"
+            app:contentPaddingTop="24dp"
+            app:contentPaddingBottom="24dp"
+            app:contentPaddingLeft="24dp"
+            app:contentPaddingRight="24dp"
+            app:cardCornerRadius="8dp"
+            android:id="@+id/pilihan_fase_level"
+            android:visibility="gone"
+            android:elevation="4dp"
+            app:layout_constraintTop_toTopOf="@id/cv_fase_level"
+            app:layout_constraintBottom_toBottomOf="@id/cv_fase_level"
+            app:layout_constraintEnd_toEndOf="@id/cv_fase_level"
+            app:layout_constraintStart_toStartOf="@id/cv_fase_level"
+            android:layout_height="wrap_content">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/tv_fase_title"
+                    style="@style/BaseGillSansMedium"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="Mar Joe Kee"
+                    android:textColor="@color/black"
+                    android:textSize="16sp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </androidx.cardview.widget.CardView>
+
+        <Button
+            android:id="@+id/btn_start_terapi"
+            style="@style/BaseHelvHeavy.TitleText"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="40dp"
+            android:layout_marginEnd="24dp"
+            android:layout_marginBottom="32dp"
+            android:background="@drawable/round_primary_btn"
+            android:text="Mulai Terapi"
+            android:textAllCaps="false"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/cv_fase_level" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
