--- a/app/src/main/res/layout/item_pilihan_jawaban_fase56_lv1.xml
+++ b/app/src/main/res/layout/item_pilihan_jawaban_fase56_lv1.xml
@@ -1,34 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_marginStart="16dp"
-    android:layout_marginTop="12dp"
-    android:layout_marginBottom="12dp"
-    android:layout_marginEnd="16dp"
+    android:layout_width="90dp"
+    android:layout_height="90dp"
+    android:id="@+id/item_body"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
     <ImageView
         android:id="@+id/iv_input_img"
-        android:layout_width="165dp"
-        android:layout_height="165dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:scaleType="centerCrop"
+        android:layout_margin="0dp"
+        android:adjustViewBounds="true"
         android:background="@drawable/round_img_input_materi"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"/>
 
-    <EditText
-        android:id="@+id/edt_option_text"
+    <TextView
+        android:id="@+id/tv_caption"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="@drawable/bottom_clip_materi_item"
-        android:inputType="textCapWords"
-        android:paddingStart="32dp"
-        android:paddingTop="16dp"
-        android:paddingEnd="32dp"
-        android:paddingBottom="16dp"
+        android:paddingStart="2dp"
+        android:paddingTop="2dp"
+        android:paddingEnd="2dp"
+        android:paddingBottom="2dp"
         android:textAlignment="center"
         android:textColor="@color/white"
         android:textColorHint="@color/white"
