--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,5 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="rounded_image">8dp</dimen>
     <dimen name="cover_materi">24dp</dimen>
+    <dimen name="jawaban_spacing">16dp</dimen>
 </resources>
