--- a/app/src/main/res/layout/item_materi_lite.xml
+++ b/app/src/main/res/layout/item_materi_lite.xml
@@ -19,17 +19,17 @@
 
         <TextView
             android:id="@+id/tv_title"
-            android:layout_width="0dp"
-            android:layout_marginEnd="12dp"
-            android:layout_marginStart="12dp"
-            android:layout_marginBottom="12dp"
             style="@style/BaseHelvMedium.TextRegular"
-            android:textColor="@color/black"
-            android:textAlignment="center"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginStart="12dp"
+            android:layout_marginEnd="12dp"
+            android:textAlignment="center"
+            android:textColor="@color/black"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
             tools:text="Template A" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
